2001-07-02  Ezra Peisach  <epeisach@mit.edu>

	* commands.c: Remove prototypes for EncryptAutoEnc(),
	EncryptAuthDec(), EcnryptDebug(), EncryptVerbose() as they exists
	in enc-proto.h in libtelnet.


2001-07-02  Ezra Peisach  <epeisach@mit.edu>

	* commands.c: Declare sourceroute() static.

2001-07-01  Ezra Peisach  <epeisach@mit.edu>

	* commands.c: Declare local functions static.

	* main.c: Declare usage() static.

	* ring.h: Provide full prototypes for ring_mark() and
	ring_clear_mark(). 

	* sys_bsd.c: Declare signal handler and NetNonblockingIO static.

	* telnet.c: Declear gettermname() and mklist() static. Change
	local variable timeout to tmie_out to avoid shadowing curses
	header file. 

2001-06-22  Ezra Peisach  <epeisach@mit.edu>

	* commands.c (tn): Change sin to sin4 to not shadow global.

	* authenc.c (telnet_gets): Change local variable prompt to tprompt
	to not shadow global variable.

2001-06-21  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Test for parsetos() prototype and presence of
	curses.h and term.h header files.

	* telnet.c: Include term.h and curses.h if present for setupterm()
	prototype.

	* main.c: Declare prototype for parsetos() if needed.

2001-06-19  Ezra Peisach  <epeisach@mit.edu>

	* telnet.c (telrcv): Ensure variable set before use.

2001-06-18  Ezra Peisach  <epeisach@mit.edu>

	* commands.c: Cast argument to isspace() to int.

	* telnet.c (mklist): Cast argument to islower()/toupper() to int.

2001-06-08  Ezra Peisach  <epeisach@mit.edu>

	* main.c: Include unistd.h (if present) for getopt() prototype.

2001-06-07  Ezra Peisach  <epeisach@mit.edu>

	* authenc.c (telnet_gets): Cleanup assignment in conditional.

	* commands.c: Include sys/wait.h, libtelent/auth.h,
	libtelnet/encrypt.h for prototypes. Explicity declare functions as
	returning int. Assignments in conditionals cleanup.

	* externs.h: Add numerous prototypes.

	* ring.c (ring_init): Explicitly declare as returning int.
